refactoring and add ExceptionAdvice and when personal logIn